fix: fix misalignment and subtitles

--- a/src/main.css
+++ b/src/main.css
@@ -24,6 +24,7 @@ section {
   display: grid;
   gap: calc(var(--gap) / 2);
   backdrop-filter: blur(var(--gap));
+  overflow: scroll;
 }
 h1,
 h2 {
@@ -39,7 +40,6 @@ button {
 }
 #scene {
   right: 0;
-  overflow: scroll;
 }
 hr {
   height: 1px;
@@ -62,9 +62,9 @@ input[type=number] {
 }
 input[type=color] {
   border: 1px solid var(--gray);
-  border-radius: 6px;
-  max-width: 1.5rem;
-  max-height: 1.5rem;
+  border-radius: 3px;
+  max-height: 19px;
+  vertical-align: middle;
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -72,13 +72,13 @@ input[type=color] {
 }
 ::-moz-color-swatch {
   border: 0;
-  border-radius: 6px;
+  border-radius: 3px;
 }
 ::-webkit-color-swatch {
   border: 0;
-  border-radius: 6px;
+  border-radius: 3px;
 }
 ::-webkit-color-swatch-wrapper {
-  border-radius: 6px;
+  border-radius: 3px;
   padding: 0;
 }
